# persistent_structs

./: Cargo.toml  README.md
src/: lib.rs
tests/: simple.rs
